# peelbox

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.TXT  PRD-2.0.md  PRD.md  README.md  ROADMAP.md  analysis.md  build.rs  dive_0.13.1_linux_amd64.rpm  test_build.json  test_build_work.json  universalbuild.json
crates/buildkit/: Cargo.toml  build.rs
crates/buildkit/src/: connection.rs  content_service.rs  digest.rs  docker.rs  filesend_service.rs  filesync.rs  fsutil.rs  lib.rs  llb.rs  oci_index.rs  progress.rs  proto.rs  session.rs  stream_conn.rs
crates/buildkit/src/llb/: builder.rs  mod.rs  strategy.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/cli/: commands.rs  mod.rs  output.rs
crates/cli/tests/: README.md  backend_health_test.rs  container_buildkit.rs  container_e2e.rs  llm_e2e.rs  llm_embedded.rs  static_cli.rs  static_e2e.rs  static_mock_detection.rs
crates/cli/tests/recordings/: e2e_test_bazel_build_detection__7969c4173a87312dfb787c8e27e732fc.json  e2e_test_bazel_build_detection__99dc84e344588e69f8d37789856fa0de.json  e2e_test_bazel_build_detection__a905119c5c661864c012c465980ea139.json  e2e_test_bazel_build_detection__f6f8dee0a66bde4fe58662cd20dced21.json  e2e_test_bazel_build_llm__7969c4173a87312dfb787c8e27e732fc.json  e2e_test_bazel_build_llm__99dc84e344588e69f8d37789856fa0de.json  e2e_test_bazel_build_llm__a905119c5c661864c012c465980ea139.json  e2e_test_bazel_build_llm__e163731e2ffbfa4c67be9927158a8906.json  e2e_test_bazel_build_llm__f6f8dee0a66bde4fe58662cd20dced21.json  e2e_test_cargo_workspace_llm__3afe8c7f535e9495149232b36657f2e8.json  e2e_test_cargo_workspace_llm__5726ae88d6b89f4613eca840ead4aae4.json  e2e_test_cargo_workspace_llm__7f42eb5fc3fb020773b869878f48e2a8.json  e2e_test_cargo_workspace_llm__9f0434db7bce1ef17789230f7c58f39a.json  e2e_test_cargo_workspace_llm__d9c163945119dcb841feb958ccd2970e.json  e2e_test_cargo_workspace_llm__f06d14d6365870edcaf128debf05944c.json  e2e_test_cpp_cmake_llm__0fc5ee0d50ad75cbb7f2a90f8bf7f319.json  e2e_test_cpp_cmake_llm__1f23ff4e393b87591e631085d9b17e4b.json  e2e_test_cpp_cmake_llm__2f7cf6056abc5d519a5fef3491ed0068.json  e2e_test_cpp_cmake_llm__38b7c06934118b2450842e13a6adf434.json  e2e_test_cpp_cmake_llm__4d555e4284296cd36bb73fdf18de0e44.json  e2e_test_cpp_cmake_llm__a68feb6b163e551fc133f2a00a27ac74.json  e2e_test_cpp_cmake_llm__bd8b7ace9c1a96565b822c21e52fe9b2.json  e2e_test_deno_fresh_detection__1a95451168261f945d0f699d1261c0b5.json  e2e_test_deno_fresh_detection__54499ba38b0b954c6c78c5b3e4b92cff.json  e2e_test_deno_fresh_detection__d3395c935b303d08454ddb4e8c18854f.json  e2e_test_deno_fresh_detection__e9f5dd016c249aba35bf172c119e592c.json  e2e_test_deno_fresh_llm__1a95451168261f945d0f699d1261c0b5.json  e2e_test_deno_fresh_llm__54499ba38b0b954c6c78c5b3e4b92cff.json  e2e_test_deno_fresh_llm__c11d7639051df11a74050dee3100b9fd.json  e2e_test_deno_fresh_llm__d3395c935b303d08454ddb4e8c18854f.json  e2e_test_deno_fresh_llm__e9f5dd016c249aba35bf172c119e592c.json  e2e_test_dotnet_csproj_llm__4c6e227df1b9e99eed96d965b5765599.json  e2e_test_dotnet_csproj_llm__8c9e9a6fe904746ffa8188a06d2e539b.json  e2e_test_dotnet_csproj_llm__a1fec3b6c1fee01d05ae131eda878ab2.json  e2e_test_dotnet_csproj_llm__c28fbf84c6bff1a1b6803b4e4b9cf08e.json  e2e_test_dotnet_csproj_llm__c4043a44d92b9dd37e525a97b48fe41d.json  e2e_test_elixir_mix_llm__0d570869aea15007c8b8896332b42651.json  e2e_test_elixir_mix_llm__87b9a0df5692c66f2775829882f5d850.json  e2e_test_elixir_mix_llm__89bf4b829bd46542d6e55c2d6847a65c.json  e2e_test_elixir_mix_llm__9f206af9f7900bb4e2bf9d28d775a8c7.json  (+125 more)
crates/cli/tests/support/: container_harness.rs  discovery.rs  e2e.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/fs/: mock.rs  mod.rs  trait.rs
crates/core/src/heuristics/: logger.rs  mod.rs
crates/core/src/output/: schema.rs
crates/core/src/progress/: handler.rs  logging.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  genai.rs  lazy.rs  lib.rs  mock.rs  recording.rs  selector.rs
crates/llm/src/embedded/: client.rs  download.rs  hardware.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/pipeline/src/detection/: service.rs
crates/pipeline/src/extractors/: common.rs  context.rs  env_vars.rs  health.rs  port.rs
crates/pipeline/src/extractors/parsers/: config.rs  docker_compose.rs  dockerfile.rs  env_file.rs  kubernetes.rs
crates/pipeline/src/pipeline/: confidence.rs  context.rs  orchestrator.rs  phase_trait.rs  service_context.rs
crates/pipeline/src/pipeline/phases/: 01_scan.rs  02_workspace.rs  06_root_cache.rs  07_0_stack.rs  07_2_build.rs  07_8_cache.rs  07_service_analysis.rs  08_assemble.rs
crates/pipeline/src/validation/: mod.rs  rules.rs  validator.rs
crates/stack/: Cargo.toml
crates/stack/src/: AGENTS.md  build_system_id.rs  detection.rs  language_id.rs  lib.rs  registry.rs
crates/stack/src/buildsystem/: bun.rs  bundler.rs  cargo.rs  cmake.rs  composer.rs  dotnet.rs  go_mod.rs  gradle.rs  llm.rs  make.rs  maven.rs  meson.rs  mix.rs  mod.rs  node_common.rs  npm.rs  pip.rs  pipenv.rs  pnpm.rs  poetry.rs  python_common.rs  yarn.rs
crates/stack/src/framework/: actix.rs  aspnet.rs  axum.rs  django.rs  echo.rs  express.rs  fastapi.rs  fastify.rs  flask.rs  gin.rs  ktor.rs  laravel.rs  llm.rs  micronaut.rs  mod.rs  nestjs.rs  nextjs.rs  phoenix.rs  quarkus.rs  rails.rs  sinatra.rs  spring_boot.rs  symfony.rs
crates/stack/src/language/: cpp.rs  dotnet.rs  elixir.rs  go.rs  java.rs  javascript.rs  llm.rs  mod.rs  parsers.rs  php.rs  python.rs  ruby.rs  rust.rs  zig.rs
crates/stack/src/orchestrator/: lerna.rs  llm.rs  mod.rs  nx.rs  turborepo.rs
crates/stack/src/runtime/: beam.rs  dotnet.rs  jvm.rs  llm.rs  mod.rs  native.rs  node.rs  php.rs  python.rs  ruby.rs
crates/wolfi/: Cargo.toml
crates/wolfi/src/: lib.rs
src/: config.rs  (+2 more)
tests/fixtures/python-project/: .gitignore  README.md  pyproject.toml
tests/fixtures/rust-project/: Cargo.toml  README.md
tests/fixtures/rust-project/src/: lib.rs  main.rs
(+1001 files in other folders)
