[package]
name = "peelbox"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
authors = ["Kirill Orlov"]
description = "AI-powered buildkit frontend for intelligent build command detection"
repository = "https://github.com/diverofdark/peelbox"
license = "Apache-2.0"

[[bin]]
name = "peelbox"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
roxmltree = "0.19"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = "1.10"
ignore = "0.4"
reqwest = { version = "0.12.25", features = ["json", "blocking"] }
async-trait = "0.1"
genai = "0.4"
atty = "0.2"
dirs = "6.0.0"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tar = "0.4"
flate2 = "1.0"
strsim = "0.11"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
sha2 = "0.10"
hex = "0.4"

# BuildKit dependencies (we implement LLB generation ourselves)
tonic = "0.12"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1.5"
bollard = "0.18"
futures-util = "0.3"

# Embedded LLM dependencies (base)
hf-hub = "0.4"
tokenizers = "0.22.2"
sysinfo = "0.37.2"

# Candle dependencies (CPU-only by default)
candle-core = { version = "0.9.2-alpha.1" }
candle-nn = { version = "0.9.2-alpha.1" }
candle-transformers = { version = "0.9.2-alpha.1" }
bincode = "1.3.3"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
ureq = { version = "2.9", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
yare = "3.0.0"
filetime = "0.2"
testcontainers = "0.23"
bollard = "0.18"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
debug = true
