[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/llm",
    "crates/buildkit",
    "crates/wolfi",
    "crates/stack",
    "crates/pipeline",
    "crates/cli",
]

[workspace.dependencies]
peelbox-core = { path = "crates/core" }
peelbox-llm = { path = "crates/llm" }
peelbox-buildkit = { path = "crates/buildkit" }
peelbox-wolfi = { path = "crates/wolfi" }
peelbox-stack = { path = "crates/stack" }
peelbox-pipeline = { path = "crates/pipeline" }
peelbox-cli = { path = "crates/cli" }

[profile.release]
debug = true
