[package]
name = "peelbox-buildkit"
version.workspace = true
edition.workspace = true

[dependencies]
peelbox-core = { path = "../core" }
tonic = "0.14"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1.5"
bollard = "0.18"
futures-util = "0.3"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ignore = "0.4"
hex = "0.4"
walkdir = "2.4"

[build-dependencies]
tonic-build = "0.12"
ureq = { version = "2.9", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"
