[package]
name = "peelbox-core"
version = "0.3.0"
edition = "2021"

[dependencies]
genai = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
indicatif = "0.17"
schemars = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6.0.0"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
regex = "1.10"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockall = "0.13"
tempfile = "3.8"
serial_test = "3.0"
