[package]
name = "peelbox-llm"
version.workspace = true
edition.workspace = true

[dependencies]
peelbox-core = { path = "../core" }
genai = "0.4"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
sysinfo = "0.37.2"
hf-hub = "0.4"
tokenizers = "0.22.2"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.25", features = ["json", "blocking"] }
dirs = "6.0.0"
md5 = "0.7"

# Candle dependencies
candle-core = { version = "0.9.2-alpha.1" }
candle-nn = { version = "0.9.2-alpha.1" }
candle-transformers = { version = "0.9.2" }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dev-dependencies]
tempfile = "3.8"
