[package]
name = "peelbox-pipeline"
version = "0.3.0"
edition = "2021"

[dependencies]
peelbox-core = { path = "../core" }
peelbox-llm = { path = "../llm" }
peelbox-stack = { path = "../stack" }
peelbox-wolfi = { path = "../wolfi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
regex = "1.10"
ignore = "0.4"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
strsim = "0.11"
genai = "0.4"

[dev-dependencies]
tempfile = "3.8"
