[package]
name = "peelbox-stack"
version.workspace = true
edition.workspace = true

[dependencies]
peelbox-core = { path = "../core" }
peelbox-llm = { path = "../llm" }
peelbox-wolfi = { path = "../wolfi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
tokio = { version = "1.35", features = ["full"] }
toml = "0.8"
roxmltree = "0.19"

[dev-dependencies]
tempfile = "3.8"
