[package]
name = "peelbox-wolfi"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12.25", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
dirs = "6.0.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
