[package]
name = "test-rust-project"
version = "0.1.0"
edition = "2021"
authors = ["Test Author <test@example.com>"]
description = "A test Rust project for aipack testing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/test/test-rust-project"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
